--- a/css/styles.css
+++ b/css/styles.css
@@ -4932,8 +4932,12 @@ fieldset:disabled .btn {
 .card-header {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  /* background-color: rgb(255, 255, 255); */
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.125); */
+  background-image: url(../assets/logo/logo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-attachment: local;
 }
 .card-header:first-child {
   border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
